clusters/home-lab-kubernetes-01/manifests/namespaces/istio-system/gateways.networking.istio.io/podinfo-home-zufardhiyaulhaq-com-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: podinfo-home-zufardhiyaulhaq-com-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "podinfo.home.zufardhiyaulhaq.com"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - "podinfo.home.zufardhiyaulhaq.com"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: podinfo-home-zufardhiyaulhaq-com-cert
      mode: SIMPLE
